# waveshare-esp32-s3-sim7670g

./: .gitignore  CMakeLists.txt  README.md  default_16MB.csv  sdkconfig.defaults
.github/workflows/: ci_build.yaml
components/SIM7670_gnss/: CMakeLists.txt  Doxyfile  README.md  SIM7670_gnss.cpp  SIM7670_gnss.hpp  sim76xx_gps.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/lib/: GNSS-With-WaveshareCloud.ino
main/lib/Adafruit_MAX1704X/: CMakeLists.txt
main/lib/Adafruit_MAX1704X/src/: Adafruit_MAX1704X.cpp  Adafruit_MAX1704X.h
main/lib/Adafruit_NeoPixel/: CMakeLists.txt
main/lib/MqttLogger/: CMakeLists.txt
main/lib/MqttLogger/src/: MqttLogger.cpp  MqttLogger.h
main/lib/TinyGSM/: CMakeLists.txt
main/lib/TinyGSM/src/: TinyGsmCommon.h
main/lib/esp-fs-webserver/examples/customHTML/: customHTML.ino
main/lib/esp-fs-webserver/examples/customOptions/: customOptions.ino
main/lib/esp-fs-webserver/examples/gpio_list/: gpio_list.ino
main/lib/esp-fs-webserver/examples/handleFormData/: handleFormData.ino
main/lib/esp-fs-webserver/examples/highcharts/: highcharts.ino
main/lib/esp-fs-webserver/examples/remoteOTA/: remoteOTA.ino
main/lib/esp-fs-webserver/examples/simpleServer/: simpleServer.ino
main/lib/esp-fs-webserver/examples/withWebSocket/: withWebSocket.ino
main/lib/esp-fs-webserver/src/: edit_htm.h  esp-fs-webserver.cpp  esp-fs-webserver.h
main/lib/esp-fs-webserver/src/websocket/: WebSockets.h  WebSocketsServer.h
main/lib/mpu6500/: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  README_de.md  README_ja.md  README_ko.md
main/lib/mpu6500/example/: driver_mpu6500_basic.c  driver_mpu6500_basic.h  driver_mpu6500_dmp.c  driver_mpu6500_dmp.h  driver_mpu6500_fifo.c  driver_mpu6500_fifo.h
main/lib/mpu6500/interface/: driver_mpu6500_interface.h  driver_mpu6500_interface_template.c
main/lib/mpu6500/src/: driver_mpu6500.c  driver_mpu6500.h
main/lib/pubsubclient/: CMakeLists.txt
main/lib/pubsubclient/src/: PubSubClient.h
main/src/: camControl.cpp  main.cpp  main.hpp  pins.hpp  pppos_client.cpp  pppos_client.h  system.cpp  system.hpp
main/src/carBattery/: carBattery.cpp  carBattery.hpp
main/src/idf_modem/: pppos_client.cpp  pppos_client.h  pppos_client.hpp
main/src/imu6500/: driver_mpu6500_dmp.c  driver_mpu6500_dmp.h  imu_DMP6.cpp  imu_DMP6.hpp  motionCalc.cpp  motionCalc.hpp
main/src/imu6500/interface/: driver_mpu6500_interface.cpp  driver_mpu6500_interface.h
main/src/led/: led.cpp  led.hpp
main/src/modem/: modem.cpp  modem.hpp  modem_ppp.cpp  modem_sendFile.cpp  modem_ssl.cpp  modemgps.cpp  modemhttps.cpp
main/src/power/: power.cpp  power.hpp
main/src/rtc/: rtc.cpp  rtc.hpp
main/src/sdcard/: sdcard.cpp  sdcard.h
main/src/ssl/: mqtt_client.crt  mqtt_client.key
main/src/web_server/: web.cpp  web.hpp
main/src/wifi/: mqttCallback.cpp  mqtt_client.cpp  mqtt_client.hpp  wifi.cpp  wifi.hpp
